<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="email">boy44127@gmail.com</string>
    <string name="mail_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_intent_data">mailto:</string>
    <string name="share_intent_type">text/plain</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="update">Обновить</string>
    <string name="no_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="unknown_track_name">Неизвестный трек</string>
    <string name="unknown_artist_name">Неизвестный исполнитель</string>
    <string name="you_searched_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="default_time">00:00</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="library_empty">Ваша медиатека пуста</string>
    <string name="no_playlist_created">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="saved_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name">Название*</string>
    <string name="desc">Описание</string>
    <string name="create">Создать</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="finish_playlist_creation_name">Завершить создание плейлиста?</string>
    <string name="finish_playlist_creation_desc">Все несохраненные данные будут потеряны</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="playlist_creation_error">Не удалось создать плейлист %s</string>
    <string name="playlist_update_error">Трек уже добавлен в плейлист %s</string>
    <string name="playlist_updated">Добавлено в плейлист %s</string>
    <string name="want_to_delete">Хотите удалить трек?</string>
    <string name="YES">ДА</string>
    <string name="NO">НЕТ</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="ok">ок</string>
    <string name="nothing_to_share">Нечем поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="want_to_delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="delete">Удалить</string>
</resources>