<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    style="@style/Background"
    tools:context=".ui.settings.fragment.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/settings"
        style="@style/ToolbarStyle"/>



    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_marginTop="@dimen/large_size"
        android:text="@string/night_theme"
        style="@style/SwitchStyle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share"
        android:text="@string/share_application"
        android:drawableEnd="@drawable/ic_share"
        style="@style/SettingsItemText"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support"
        android:text="@string/support"
        android:drawableEnd="@drawable/ic_support"
        style="@style/SettingsItemText"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userAgreement"
        android:text="@string/user_agreement"
        android:drawableEnd="@drawable/ic_forward_arrow"
        style="@style/SettingsItemText"/>

</LinearLayout>