<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/normal_size"
    style="@style/BackgroundVariant">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/large_size"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            app:icon="@drawable/ic_search"
            android:text="@string/search"
            style="@style/MenuButtonStyle" />

        <Button
            android:id="@+id/library"
            app:icon="@drawable/ic_library"
            android:text="@string/media_library"
            style="@style/MenuButtonStyle" />

        <Button
            android:id="@+id/settings"
            app:icon="@drawable/ic_settings"
            android:text="@string/settings"
            style="@style/MenuButtonStyle"/>

    </LinearLayout>

</LinearLayout>