<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical"
    style="@style/Background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/searchToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/search"
        app:navigationIcon="@drawable/ic_back_arrow"
        style="@style/ToolbarStyle"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/normal_size"
        android:paddingTop="@dimen/small_size"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/normal_size">
            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:background="@drawable/search_radius"
                android:hint="@string/search"
                android:padding="@dimen/medium_size"
                android:drawablePadding="10dp"
                style="@style/EditTextStyle"
                android:paddingEnd="40dp"
                tools:backgroundTint="@color/lightGray"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <ImageButton
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_clear"
                android:layout_gravity="end"
                android:background="@null"
                android:padding="@dimen/normal_size"
                android:visibility="gone"/>
        </FrameLayout>

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/tracksRecyclerView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--            android:layout_marginTop="@dimen/normal_size"-->
<!--            tools:listitem="@layout/track" />-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tracksRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginTop="@dimen/normal_size"
                tools:listitem="@layout/track"
                tools:visibility="gone"/>

            <LinearLayout
                android:id="@+id/connectionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:visibility="visible"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/connectionIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_no_internet" />

                <TextView
                    android:id="@+id/connectionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/ys_display_medium"
                    android:textFontWeight="400"
                    android:textSize="19dp"
                    style="@style/Text"
                    android:layout_marginTop="@dimen/normal_size"
                    android:layout_marginHorizontal="@dimen/large_size"
                    android:layout_marginBottom="@dimen/large_size"
                    tools:text="@string/no_internet"/>

                <Button
                    android:id="@+id/connectionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/colorOnSecondary"
                    app:cornerRadius="54dp"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:letterSpacing="0"
                    tools:visibility="visible"
                    android:visibility="gone"/>
            </LinearLayout>
        </FrameLayout>


    </LinearLayout>


</LinearLayout>